--- a/includes/js/proud-actions-app/bower.json
+++ b/includes/js/proud-actions-app/bower.json
@@ -4,9 +4,6 @@
     "afkl-lazy-image": "~0.0.11",
     "angular": "~1.3.17",
     "angular-animate": "~1.3.17",
-    "angular-bindonce": "0.3.1",
-    "angular-google-maps": "~2.0.19",
-    "angular-google-places-autocomplete": "~0.2.7",
     "angular-resource": "~1.3.6",
     "angular-sanitize": "~1.3.17",
     "angular-stripe-checkout": "~2.2.1",
@@ -14,6 +11,14 @@
     "angular-ui-router": "0.2.15",
     "angular-inview": "~1.5.0",
     "angular-lazycompile": "git@github.com:aschmoe/angular-lazycompile#master",
-    "proudcity-patterns": "proudcity/proudcity-patterns#master"
+    "proudcity-patterns": "proudcity/proudcity-patterns#master",
+    "mapbox.js": "~2.2.3",
+    "leaflet.locatecontrol": "~0.45.1",
+    "lodash": "~3.10.1"
+  },
+  "overrides": {
+    "mapbox.js": {
+      "main": "mapbox.standalone.js"
+    }
   }
 }
