--- a/includes/js/proud-actions-app/bower.json
+++ b/includes/js/proud-actions-app/bower.json
@@ -2,8 +2,8 @@
   "name": "Angular Bootstrap Boilerplate",
   "dependencies": {
     "afkl-lazy-image": "~0.0.11",
-    "angular": "~1.3.17",
-    "angular-animate": "~1.3.17",
+    "angular": "~1.5.8",
+    "angular-animate": "~1.5.8",
     "angular-resource": "~1.3.6",
     "angular-sanitize": "~1.3.17",
     "angular-touch": "~1.3.17",
@@ -13,11 +13,16 @@
     "proudcity-patterns": "proudcity/proudcity-patterns#master",
     "mapbox.js": "~2.2.3",
     "leaflet.locatecontrol": "~0.45.1",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "ngmap": "^1.17.8",
+    "map-icons": "^3.0.0"
   },
   "overrides": {
     "mapbox.js": {
       "main": "mapbox.standalone.js"
     }
+  },
+  "resolutions": {
+    "angular": ">= 1.0.8"
   }
 }
